--- a/client/main.html
+++ b/client/main.html
@@ -11,22 +11,23 @@
   <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
+  
   <div id="app">
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
       <a class="navbar-brand" href="#">Expand at md</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-  
+      
       <div class="collapse navbar-collapse" id="navbarsExample04">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <button class="btn btn-danger">Logout</button>
+            <button @click="logout" class="btn btn-danger">Logout</button>
           </li>
         </ul>
       </div>
     </nav>
-
+    
     <div class="container">
       <form v-on:submit.prevent="addTask">
         <label for="task">Task</label>
@@ -37,8 +38,8 @@
       </form>
     </div>
   </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>  
+  
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> 
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
