--- a/client/main.html
+++ b/client/main.html
@@ -28,15 +28,7 @@
       </div>
     </nav>
     
-    <div class="container">
-      <form v-on:submit.prevent="addTask">
-        <label for="task">Task</label>
-        <input type="text" class="form-control" v-model="taskName">
-        <label for="due">Due Date</label>
-        <input type="date" class="form-control" v-model="dueDate">
-        <button type="submit">Submit Task</button>
-      </form>
-    </div>
+    <todos></todos>
   </div>
   
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> 
